--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,11 +28,14 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@popperjs/core": "^2.9.2",
+    "animejs": "^3.2.1",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.10.2",
     "clean-webpack-plugin": "^4.0.0",
     "phaser": "^3.55.2",
+    "scrollmagic": "^2.0.8",
     "terser-webpack-plugin": "^5.3.6",
     "webpack-merge": "^5.8.0"
   }
