adding api library validator for form validations

--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.19.0",
