--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "bootstrap-icons": "^1.10.2",
     "clean-webpack-plugin": "^4.0.0",
     "phaser": "^3.55.2",
+    "scroll-to-element": "^2.0.3",
     "scrollmagic": "^2.0.8",
     "terser-webpack-plugin": "^5.3.6",
     "webpack-merge": "^5.8.0"
