--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "cookie-session": "^2.0.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "validator": "^13.7.0"
